# mobius_kit

./: README.md  components.d.ts  index.html  package-lock.json  package.json  vite.config.ts
mock/: csr.json
src/: App.vue  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: atem.rs  code_flow.rs  combiner.rs  config.rs  divider.rs  fusion.rs  inspector.rs  main.rs  reflector.rs  scaffold.rs  transient.rs  user.rs  utils.rs  vestige.rs  void_probe.rs  voyager.rs
src-tauri/src/atem/: annotation.rs  metadata.rs  rawdata.rs  usecase.rs
src-tauri/src/fusion/: config.rs  fusion.rs  top.rs
src-tauri/src/inspector/: v2.rs
src-tauri/src/scaffold/: template.rs
src-tauri/src/transient/: model.rs  worker.rs
src-tauri/src/utils/: directory.rs  env.rs  hide_directory.rs  project_path.rs  rtf.rs
src-tauri/src/vestige/: client.rs  dto.rs
src-tauri/src/void_probe/: record.rs
src/api/codeflow/: codeflow.ts
src/api/fusion/: config.ts  fusion.ts  top.ts
src/api/inspector/: file.ts  inspector.ts  openProjectFileParam.ts  project.ts  tracker.ts
src/api/mobiuskit/: user.ts
src/api/project-context/: context.ts
src/api/scaffold/: create.ts  (+2 more)
src/components/: AppHeader.vue  Directory.vue  InspectorGauge.vue  InspectorItem.vue  InspectorSummary.vue  OutputTag.vue  ProjectContext.vue  Timeline.vue
src/router/: index.ts
src/store/: atem.ts  codeflow.ts  context.ts  fusion.ts  inspector.ts  inspectorV2.ts  reflector.ts  scaffold.ts  voidprobe.ts  voyager.ts
src/views/: Combiner.vue  Home.vue  Scaffold.vue
(+97 files in other folders)
