[package]
name = "mobius_kit"
version = "0.0.0"
description = "Tool kits for statisical department, Akesobio"
authors = ["yuki"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [
    "clipboard-all",
    "window-set-cursor-icon",
    "dialog-all",
    "path-all",
    "fs-all",
    "shell-open",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
inspector = { path = "../../inspector" }
rtf_divider = { path = "../../rtf_divider" }
scaffold = { path = "../../scaffold" }
void_probe = { path = "../../void_probe" }
code_flow = { path = "../../code_flow" }
voyager = { path = "../../voyager" }
fusion = { path = "../../fusion" }
reflector = { path = "../../reflector" }
atem = { path = "../../atem" }
anyhow = "1.0.77"
serde_yaml = "0.9.32"
winapi = { version = "0.3.9", features = ["winbase"] }
lazy_static = "1.5.0"
chrono = "0.4.38"
reqwest = { version = "0.12.12", features = ["blocking", "json"] }

[features]
default = ["test"]
prod = []
test = []
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
